fix context path

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -41,7 +41,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: ./ext/installfiles/linux/zerotier-containerized
+          context: .
+          file: ext/installfiles/linux/zerotier-containerized/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
           tags: tzhao11/zerotier:latest
