--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -43,6 +43,6 @@ jobs:
         with:
           context: .
           file: ext/installfiles/linux/zerotier-containerized/Dockerfile
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64,linux/arm64,linux/386,linux/arm/v7,linux/arm/v6
           push: true
           tags: tzhao11/zerotier:latest
