--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,30 +1,29 @@
-# This is a basic workflow to help you get started with Actions
+name: Build and push Docker image
 
-name: Docker Build
-
-# Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   schedule:
     - cron: '0 0 * * *'
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Get latest release version
+        uses: pozetroninc/github-action-get-latest-release@master
+        id: latest-release
+        with:
+          owner: zerotier
+          repo: ZeroTierOne
+          excludes: prerelease, draft
+          
       - name: Checkout
         uses: actions/checkout@v2
         with:
           repository: 'zerotier/ZeroTierOne'
+          ref: ${{ steps.latest-release.outputs.release }}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -45,4 +44,6 @@ jobs:
           file: ext/installfiles/linux/zerotier-containerized/Dockerfile
           platforms: linux/amd64,linux/arm64,linux/386,linux/arm/v7,linux/arm/v6
           push: true
-          tags: tzhao11/zerotier:latest
+          tags: |
+            tzhao11/zerotier:latest
+            tzhao11/zerotier:${{ steps.latest-release.outputs.release }}
